<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top Rated</string>
    <string name="title_activity_detail">Movie Detail</string>
    <string name="backdrop_image">Backdrop Image</string>
    <string name="Overview">Overview</string>
    <string name="Review">Review</string>
    <string name="Trailers">Trailer</string>
    <string name="action_share">Share</string>
    <string name="action_favourite">Favourite</string>
    <string name="movie_release">2018-02-07</string>
    <string name="movie_vote_average">9.0</string>
    <string name="poster">Movie Poster</string>
</resources>
