<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:padding="10dp"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.simranjit.android.popularmoviesstage2.DetailActivityFragment"
    tools:showIn="@layout/activity_detail">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:id="@+id/movie_backdrop"
            android:adjustViewBounds="true"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/backdrop_image"
            android:src="@mipmap/img_placeholder2" />
        <ImageView
            android:layout_width="150dp"
            android:layout_height="280dp"
            android:id="@+id/movie_poster"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:textSize="28sp"
            android:contentDescription="@string/poster"
            android:layout_gravity="start|center_vertical"
            android:adjustViewBounds="true"
            android:src="@mipmap/img_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/movie_vote_average"
            android:text="@string/movie_vote_average"
            android:textSize="36sp"
            android:layout_marginTop="230dp"
            android:layout_marginStart="205dp"
            android:layout_marginLeft="205dp"/>
        <!--<ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/star"
            android:layout_marginTop="245dp"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            /> -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/movie_release"
            android:text="@string/movie_release"
            android:layout_marginTop="280dp"
            android:layout_marginStart="205dp"
            android:layout_marginLeft="205dp"/>

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="280dp"
            android:layout_marginStart="280dp"
            android:id="@+id/favbtn"
            android:layout_marginTop="180dp"
            android:background="#e01879"
            android:src="@mipmap/dislike" />

    </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/Overview"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movie_overview"
                android:textSize="14sp"
                android:text="@string/Overview"
                />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#9e9e9e" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/Trailers"
            />
        <GridView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gridview_trailersview"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:horizontalSpacing="0dp">
        </GridView>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#9e9e9e" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:text="@string/Review"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_review"
            android:text=""
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="#000000" />
    </LinearLayout>

</ScrollView>
